--- a/Math-Ba-HANA/HANA_Funktionentheorie_Uebung/fkt_uebungen_main.tex
+++ b/Math-Ba-HANA/HANA_Funktionentheorie_Uebung/fkt_uebungen_main.tex
@@ -402,7 +402,7 @@
 
 \DeclareMathOperator{\Ln}{Ln}
 \DeclareMathOperator{\Arg}{Arg}
-
+\DeclareMathOperator{\im}{im}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
