HANA: FKT fertig

--- a/Math-Ba-HANA/HANA_Funktionentheorie_Uebung/fkt_uebungen-5.tex
+++ b/Math-Ba-HANA/HANA_Funktionentheorie_Uebung/fkt_uebungen-5.tex
@@ -32,10 +32,10 @@
 
 	\pagebreak
 
-	Sei $\CC^+ \defeq \menge{z \in \CC : \Re(z) > 0}$ und $\quer{\CC^+} \defeq \menge{z \in \CC : \Re(z) \ge 0}$. Wir wollen zeigen, dass $\CC^+$ sternförmig ist, d.h. es existiert ein $z_0 \in \CC^+$, sodass $\im(\sigma_{z_0,z}) \subseteq \CC^+$ für alle $z \in \CC^+$. Wähle $z_0 = 1$. Dann ist für jeden Punkt $z$ der rechten Halbebene auch die Verbindungsstrecke $\im(\sigma_{z_0, z})$ in der rechter Halbebene. Für einen Weg $\abb{\gamma}{[a,b]}{\quer{\CC^+}}$ betrachten wir den Weg $\gamma + \epsilon$ für ein $\epsilon > 0$. Dieser liegt dann vollständig in $\CC^+$. Dort ist $f$ holomorph und nach dem Cauchyschen Integralsatz gilt dann $\int_{\gamma + \epsilon} f(z) \dz = 0$. 
+	Sei $\CC^+ \defeq \menge{z \in \CC : \Re(z) > 0}$ und $\quer{\CC^+} \defeq \menge{z \in \CC : \Re(z) \ge 0}$. Wir wollen zeigen, dass $\CC^+$ sternförmig ist, d.h. es existiert ein $z_0 \in \CC^+$, sodass $\im(\sigma_{z_0,z}) \subseteq \CC^+$ für alle $z \in \CC^+$. Wähle $z_0 = 1$. Dann ist für jeden Punkt $z$ der rechten Halbebene auch die Verbindungsstrecke $\im(\sigma_{z_0, z})$ in der rechter Halbebene. Für einen stückweise stetig differenzierbaren und geschlossenen Weg $\abb{\gamma}{[a,b]}{\quer{\CC^+}}$ betrachten wir den Weg $\gamma + \epsilon$ für ein $\epsilon > 0$. Dieser liegt dann vollständig in $\CC^+$. Dort ist $f$ holomorph und nach dem Cauchyschen Integralsatz gilt dann $\int_{\gamma + \epsilon} f(z) \dz = 0$. 
 	
 	Sei nun $\epsilon_n \to 0$. Definiere $f_n(\gamma(t)) \defeq f(\gamma(t) + \epsilon_n)$. Dann gilt wegen der Stetigkeit von $f$, dass $f_n(\gamma(t)) \to f(\gamma(t))$ für $n \to \infty$, d.h. $f(\gamma(t) + \epsilon) \to f(\gamma(t))$ für $\epsilon \to 0$.
-	$\gamma$ ist stückweise stetig differenzierbar, d.h. wir betrachten eine Unterteilung $a = t_0 < t_1 < \dots < t_n = b$ und notieren $\mathcal{I}_i \defeq [t_i, t_{i+1}]$ für alle $i \in \menge{0, \dots, n-1}$. Aufgrund der Stetigkeit von $f$ und der Stetigkeit von $\gamma$ auf $\mathcal{I}_i$ ist $f \circ \gamma$ stetig auf kompaktem $\mathcal{I}_i$ für alle $i \in \menge{0, \dots, n-1}$. Somit existiert für alle $i \in \menge{0, \dots, n-1}$ eine integrierbare Konstante $c_i < \infty$, sodass $f_n(\gamma(t)) \le c$ für alle $t \in \mathcal{I}_i$. Definiere nun $c \equiv \max\menge{c_i : 0 \le i \le n-1}$. Damit ist $f_n(\gamma(t)) \le c$ für alle $t \in [a,b]$. Mit majorisierter Konvergenz erhalten wir also
+	$\gamma$ ist stückweise stetig differenzierbar, d.h. wir betrachten eine Unterteilung $a = t_0 < t_1 < \dots < t_n = b$ und notieren $\mathcal{I}_i \defeq [t_i, t_{i+1}]$ für alle $i \in \menge{0, \dots, n-1}$. Aufgrund der Stetigkeit von $f$ und der Stetigkeit von $\gamma$ auf $\mathcal{I}_i$ ist $f \circ \gamma$ stetig auf kompaktem $\mathcal{I}_i$ für alle $i \in \menge{0, \dots, n-1}$. Somit existiert für alle $i \in \menge{0, \dots, n-1}$ eine integrierbare Konstante $c_i < \infty$, sodass $f_n(\gamma(t)) \le c_i$ für alle $t \in \mathcal{I}_i$. Definiere nun $c \equiv \max\menge{c_i : 0 \le i \le n-1}$. Damit ist $f_n(\gamma(t)) \le c$ für alle $t \in [a,b]$. Mit majorisierter Konvergenz erhalten wir also
 	\begin{align*}
 		\lim_{\epsilon \to 0} \int_a^b f(\gamma(t) + \epsilon) \dt
 		&= \lim_{n \to \infty} \int_a^b f_n(\gamma(t)) \dt \tag{Grenzwert von Funktionen} \\
