--- a/Math-Ba-HANA/HANA_PDE_Uebung/pde-uebungen-8.tex
+++ b/Math-Ba-HANA/HANA_PDE_Uebung/pde-uebungen-8.tex
@@ -16,8 +16,8 @@
 \end{task}
 
 \begin{enumerate}[label=(zu \alph*), leftmargin=*]
-	\item Definiere $v(x,t) \defeq u(cx,t)$. Dann wird die partielle Differentialgleichung zu $v_{tt}(x,t) - v_{xx}(x,t) = u_{tt}(cx,t) - c^2 u_{xx}(cx,t) = 0$ und die Anfangswerte zu $v(x,0) = u(cx,0) = (cx)^2 \abs{e^{cx} - 1}$ sowie $v_t(x,t) = u_t(cx,t) = cx \abs{e^{cx} - 1} \defqe h(x)$ für alle $x \in \R$.
-	Wir lösen nun das Integral $\int_{x-t}^{x+t} h(y) \dy$.
+	\item Definiere $v(x,t) \defeq u(cx,t)$. Dann wird die partielle Differentialgleichung zu $v_{tt}(x,t) - v_{xx}(x,t) = u_{tt}(cx,t) - c^2 u_{xx}(cx,t) = 0$ und die Anfangswerte zu $v(x,0) = u(cx,0) = (cx)^2 \abs{e^{cx} - 1} \defqe g(x)$ sowie $v_t(x,t) = u_t(cx,t) = cx \abs{e^{cx} - 1} \defqe h(x)$ für alle $x \in \R$.
+	Wir lösen nun das Integral $\int_{x-t}^{x+t} h(y) \dy$ und wollen zuerst eine Stammfunktion finden:
 	\begin{align*}
 		\int h(y) \dy 
 		&= \int cy * \abs{e^{cy} - 1} \dy \\
@@ -35,6 +35,21 @@
 		&= \frac{1}{2c} \left(\sgn(e^{c(x+t)} - 1) * \brackets{2 (c(x+t) - 1) e^{c(x+t)} - c^2(x+t)^2} \right. \\
 		&\phantom{= } \ - \enskip \ \left. \sgn(e^{c(x-t)} - 1) * \brackets{2 (c(x-t) - 1) e^{c(x-t)} - c^2(x-t)^2}\right)
 	\end{align*}
+	\dots
+	
+	Damit gilt dann mit der Formel von d'Alembert
+	\begin{equation*}
+		g(x+t) + g(x-t) = c^2(x+t)^2 \abs{e^{cx + ct} - 1} + c^2(x-t)^2 \abs{e^{cx - ct} - 1}
+	\end{equation*}
+	und abschließend also 
+	\begin{align*}
+		v(x,t) 
+		&= \tfrac{1}{2} \brackets{g(x+t) + g(x-t)} + \tfrac{1}{2} \int_{x-t}^{x+t} h(y) \dy \\
+		&= \frac{1}{2} \brackets{c^2(x+t)^2 \abs{e^{cx + ct} - 1} + c^2(x-t)^2 \abs{e^{cx - ct} - 1}}\\
+		& + \frac{1}{2}  \frac{1}{2c} \left(\sgn(e^{c(x+t)} - 1) * \brackets{2 (c(x+t) - 1) e^{c(x+t)} - c^2(x+t)^2} \right. \\
+		&\phantom{= \frac{1}{2}} \ - \ \left. \sgn(e^{c(x-t)} - 1) * \brackets{2 (c(x-t) - 1) e^{c(x-t)} - c^2(x-t)^2}\right)
+	\end{align*}
+	\dots
 	
 	\item Definiere $v(x,t) \defeq u(x,t) + \frac{1}{12}x^4$. Lösen wir nun das Hilfsproblem $v_{tt}(x,t) - v_{xx}(x,t) = u_{tt}(x,t) - u_{xx}(x,t) - x^2 = 0$ mit den Anfangswerten $v(x,0) = u(x,0) + \frac{1}{12} x^4 = x + \frac{1}{12}x^4 \defqe g(x)$ sowie $v_t(x,0) = u_t(x,0) = 0 \defqe h(x)$ für alle $x \in \R$.
 	Wir wollen die Formel von d'Alembert anwenden und erhalten wegen $\int_{x-t}^{x+t} h(y) \dy = 0$
@@ -49,8 +64,18 @@
 	\begin{equation*}
 		u(x,t) = v(x,t) - \tfrac{1}{12}x^4 = x + \tfrac{1}{12} t^4 + \tfrac{1}{2} t^2x^2
 	\end{equation*}
+	Testen wir diese Lösung: Es ist
+	\begin{equation*}
+		\left.\begin{array}{rcl}
+			u_{tt}(x,t) &=& t^2 + x^2 \\
+			u_{xx}(x,t) &=& t^2
+		\end{array}  \right\}
+		\follows u_{tt}(x,t) - u_{xx}(x,t) = t^2 + x^2 - t^2 = x^2
+	\end{equation*}
+	Außerdem sind die Randwerte erfüllt, da $u(x,0) = x$ und $u_t(x,0) = \frac{1}{3}t^3 + x^2 t \ \big|_{t=0} = 0$.
 \end{enumerate}
 
+\pagebreak
 
 \begin{task}
 	Es sei $u$ eine Lösung der Wärmeleitungsgleichung $u_t-\Delta u=0$ in $\mathbb R^n\times (0,\infty)$. Zeigen Sie, dass für jedes $x\in \mathbb R^n$ das \textit{sphärische Mittel}
